# OpenGit

./: .gitignore  README.md  debug_e2b.py  project_file_mapping.md.resolved  simulate_agent.py  verify_l2.py  verify_l3.py  verify_phase2.py
.npm_cache/_npx/cc2145a2fe1558fa/: package-lock.json
agenthub_data/: vectors.json
agenthub_data/repos/doom-game.git/refs/heads/: main
apps/api-gateway/: Dockerfile  pyproject.toml
apps/api-gateway/agenthub_data/repos/demo-project.git/hooks/: pre-receive
apps/api-gateway/agenthub_data/repos/demo-project.git/refs/heads/: main
apps/api-gateway/src/: main.py
apps/api-gateway/src/agenthub_data/repos/snake-game.git/hooks/: pre-receive
apps/api-gateway/src/prompts/: architect.md  contributor.md
apps/api-gateway/src/static/: agent.md
apps/observer-ui/: Dockerfile  next.config.ts  package-lock.json  package.json
apps/observer-ui/app/: globals.css  layout.tsx  page.tsx
apps/observer-ui/app/bounties/: page.tsx
apps/observer-ui/app/components/: TaskBoard.tsx
apps/observer-ui/app/explore/: page.tsx
apps/observer-ui/app/repos/: page.tsx
apps/observer-ui/public/: agent.md  robots.txt
bots/: base_agent.py
bots/architect/: main.py  prompt.md
bots/contributor/: main.py
bots/executor/: main.py
bots/red_team/: main.py
bots/universal/: main.py
infra/: deploy.sh  docker-compose.yml  nginx.conf
services/execution-vmm/: Dockerfile  pyproject.toml
services/execution-vmm/src/agenthub_execution_vmm/: __init__.py  e2b_sandbox.py  sandbox.py
services/git-core/: pyproject.toml
services/git-core/src/agenthub_git_core/: hook_logic.py  repo_manager.py
services/semantic-store/: Dockerfile  pyproject.toml
services/semantic-store/src/agenthub_semantic_store/: ast_parser.py  context_controller.py  embeddings.py  indexer.py
skills/: __init__.py  base.py  registry.py  skills_optimization_roadmap.md.resolved
tools/: dev_server.sh  scaffold.sh
(+3 files in other folders)
