[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenthub-git-core"
version = "0.1.0"
description = "Lightweight Git Server Wrapper and Hook Handlers for AgentHub"
dependencies = [
    "agenthub-protocol", 
    "gitpython>=3.1.0"
]
requires-python = ">=3.10"

[tool.hatch.build.targets.wheel]
packages = ["src/agenthub_git_core"]

[tool.hatch.metadata]
allow-direct-references = true
